--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -56,54 +56,54 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/DSC680-Fall-2020-Portfolio-Projects/tree/master/project_three" class="portfolio-box">
-                    <img src="img/portfolio/10.png" class="img-responsive" alt="DSC 680 Project Three">
+                <a href="https://github.com/micgonzalez/DSC680-Fall-2020-Portfolio-Projects/tree/master/project_two" class="portfolio-box">
+                    <img src="img/portfolio/8.png" class="img-responsive" alt="DSC 680 Project Two">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
                                 School Work
                             </div>
                             <div class="project-name">
-                                DSC 680 Project Three
+                                DSC 680 Project Two
                                 <br>
                                 <br>
-                               Predicting earthquakes with machine learning.
+                               Displaying the COVID-19 effects on Los Angeles County.
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/lucky-parking/tree/reddit-analysis/notebooks" class="portfolio-box">
-                    <img src="img/portfolio/11.png" class="img-responsive" alt="Lucky Parking's Reddit Text Analysis">
+                <a href="https://github.com/micgonzalez/DSC680-Fall-2020-Portfolio-Projects/tree/master/project_two" class="portfolio-box">
+                    <img src="img/portfolio/8.png" class="img-responsive" alt="DSC 680 Project Two">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Professional
+                                School Work
                             </div>
                             <div class="project-name">
-                                Lucky Parking's Reddit Text Analysis
+                                DSC 680 Project Two
                                 <br>
                                 <br>
-                               Looking for insights from Reddit posts.
+                               Displaying the COVID-19 effects on Los Angeles County.
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/MySQL-Database-Visualizations" class="portfolio-box">
-                    <img src="img/portfolio/12.png" class="img-responsive" alt="MySQL Database Visualizations">
+                <a href="https://github.com/micgonzalez/DSC680-Fall-2020-Portfolio-Projects/tree/master/project_two" class="portfolio-box">
+                    <img src="img/portfolio/8.png" class="img-responsive" alt="DSC 680 Project Two">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Professional
+                                School Work
                             </div>
                             <div class="project-name">
-                                MySQL Database Visualizations
+                                DSC 680 Project Two
                                 <br>
                                 <br>
-                               Pulling data from a remote database to create visualizations.
+                               Displaying the COVID-19 effects on Los Angeles County.
                             </div>
                         </div>
                     </div>
