--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -2,109 +2,91 @@
     <div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/DSC540_Mid_Term_Project" class="portfolio-box">
-                    <img src="img/portfolio/5.png" class="img-responsive" alt="DSC 540 Data Transformation Mid Term Project">
+                <a href="#" class="portfolio-box">
+                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                School Work
+                                Category
                             </div>
                             <div class="project-name">
-                              DSC 540 Data Transformation Mid Term Project
-                                <br>
-                                <br>
-                               Project displaying my data wrangling skills. 
+                                Project Name
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/DSC680-Fall-2020-Portfolio-Projects/tree/master/project_one" class="portfolio-box">
-                    <img src="img/portfolio/7.png" class="img-responsive" alt="DSC 680 Project One">
+                <a href="#" class="portfolio-box">
+                    <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                School Work
+                                Category
                             </div>
                             <div class="project-name">
-                                DSC 680 Project One
-                                <br>
-                                <br>
-                               Predicting heart disease in men and women.
+                                Project Name
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/DSC680-Fall-2020-Portfolio-Projects/tree/master/project_two" class="portfolio-box">
-                    <img src="img/portfolio/8.png" class="img-responsive" alt="DSC 680 Project Two">
+                <a href="#" class="portfolio-box">
+                    <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                School Work
+                                Category
                             </div>
                             <div class="project-name">
-                                DSC 680 Project Two
-                                <br>
-                                <br>
-                               Displaying the COVID-19 effects on Los Angeles County.
+                                Project Name
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/DSC680-Fall-2020-Portfolio-Projects/tree/master/project_two" class="portfolio-box">
-                    <img src="img/portfolio/8.png" class="img-responsive" alt="DSC 680 Project Two">
+                <a href="#" class="portfolio-box">
+                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                School Work
+                                Category
                             </div>
                             <div class="project-name">
-                                DSC 680 Project Two
-                                <br>
-                                <br>
-                               Displaying the COVID-19 effects on Los Angeles County.
+                                Project Name
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/DSC680-Fall-2020-Portfolio-Projects/tree/master/project_two" class="portfolio-box">
-                    <img src="img/portfolio/8.png" class="img-responsive" alt="DSC 680 Project Two">
+                <a href="#" class="portfolio-box">
+                    <img src="img/portfolio/5.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                School Work
+                                Category
                             </div>
                             <div class="project-name">
-                                DSC 680 Project Two
-                                <br>
-                                <br>
-                               Displaying the COVID-19 effects on Los Angeles County.
-                           </div>
+                                Project Name
+                            </div>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/DSC680-Fall-2020-Portfolio-Projects/tree/master/project_two" class="portfolio-box">
-                    <img src="img/portfolio/8.png" class="img-responsive" alt="DSC 680 Project Two">
+                <a href="#" class="portfolio-box">
+                    <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                School Work
+                                Category
                             </div>
                             <div class="project-name">
-                                DSC 680 Project Two
-                                <br>
-                                <br>
-                               Displaying the COVID-19 effects on Los Angeles County.
-                              </div>
+                                Project Name
+                            </div>
                         </div>
                     </div>
                 </a>
