--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -2,90 +2,108 @@
     <div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
+                <a href="https://github.com/micgonzalez/DSC540_Mid_Term_Project" class="portfolio-box">
+                    <img src="img/portfolio/5.png" class="img-responsive" alt="DSC 540 Data Transformation Mid Term Project">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                School Work
                             </div>
                             <div class="project-name">
-                                Project Name
+                                DSC 540 Data Transformation Mid Term Project
+                                <br>
+                                <br>
+                                Project displaying my data wrangling skills.
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
+                <a href="https://github.com/micgonzalez/DSC680-Fall-2020-Portfolio-Projects/tree/master/project_one" class="portfolio-box">
+                    <img src="img/portfolio/7.png" class="img-responsive" alt="DSC 680 Project One">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                School Work
                             </div>
                             <div class="project-name">
-                                Project Name
+                                DSC 680 Project One
+                                <br>
+                                <br>
+                                Predicting heart disease in men and women.
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
+                <a href="https://github.com/micgonzalez/DSC680-Fall-2020-Portfolio-Projects/tree/master/project_two" class="portfolio-box">
+                    <img src="img/portfolio/8.png" class="img-responsive" alt="DSC 680 Project Two">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                School Work
                             </div>
                             <div class="project-name">
-                                Project Name
+                                DSC 680 Project Two
+                                <br>
+                                <br>
+                                Displaying the COVID-19 effects on Los Angeles County.
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
+                <a href="https://github.com/micgonzalez/DSC680-Fall-2020-Portfolio-Projects/tree/master/project_three" class="portfolio-box">
+                    <img src="img/portfolio/10.png" class="img-responsive" alt="DSC 680 Project Three">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                School Work
                             </div>
                             <div class="project-name">
-                                Project Name
+                                DSC 680 Project Three
+                                <br>
+                                <br>
+                                Predicting earthquakes with machine learning.
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/5.jpg" class="img-responsive" alt="">
+                <a href="https://github.com/micgonzalez/lucky-parking/tree/reddit-analysis/notebooks" class="portfolio-box">
+                    <img src="img/portfolio/11.png" class="img-responsive" alt="Lucky Parking's Reddit Text Analysis">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Professional
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Lucky Parking's Reddit Text Analysis
+                                <br>
+                                <br>
+                                Looking for insights from Reddit posts.
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
+                <a href="https://github.com/micgonzalez/MySQL-Database-Visualizations" class="portfolio-box">
+                    <img src="img/portfolio/12.png" class="img-responsive" alt="MySQL Database Visualizations">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Professional
                             </div>
                             <div class="project-name">
-                                Project Name
+                                MySQL Database Visualizations
+                                <br>
+                                <br>
+                                 Pulling data from a remote database to create visualizations.
                             </div>
                         </div>
                     </div>
