--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -3,7 +3,7 @@
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
                 <a href="https://github.com/micgonzalez/DSC540_Mid_Term_Project" class="portfolio-box">
-                    <img src="img/portfolio/5.png" class="img-responsive" alt="DSC 540 Data Transformation Mid Term Project">
+                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="DSC 540 Data Transformation Mid Term Project">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -21,7 +21,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="https://github.com/micgonzalez/DSC680-Fall-2020-Portfolio-Projects/tree/master/project_one" class="portfolio-box">
-                    <img src="img/portfolio/7.png" class="img-responsive" alt="DSC 680 Project One">
+                    <img src="img/portfolio/2.jpg" class="img-responsive" alt="DSC 680 Project One">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -39,7 +39,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="https://github.com/micgonzalez/DSC680-Fall-2020-Portfolio-Projects/tree/master/project_two" class="portfolio-box">
-                    <img src="img/portfolio/8.png" class="img-responsive" alt="DSC 680 Project Two">
+                    <img src="img/portfolio/3.jpg" class="img-responsive" alt="DSC 680 Project Two">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -57,7 +57,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="https://github.com/micgonzalez/DSC680-Fall-2020-Portfolio-Projects/tree/master/project_three" class="portfolio-box">
-                    <img src="img/portfolio/10.png" class="img-responsive" alt="DSC 680 Project Three">
+                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="DSC 680 Project Three">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -75,7 +75,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="https://github.com/micgonzalez/lucky-parking/tree/reddit-analysis/notebooks" class="portfolio-box">
-                    <img src="img/portfolio/11.png" class="img-responsive" alt="Lucky Parking's Reddit Text Analysis">
+                    <img src="img/portfolio/5.jpg" class="img-responsive" alt="Lucky Parking's Reddit Text Analysis">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -93,7 +93,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="https://github.com/micgonzalez/MySQL-Database-Visualizations" class="portfolio-box">
-                    <img src="img/portfolio/12.png" class="img-responsive" alt="MySQL Database Visualizations">
+                    <img src="img/portfolio/6.jpg" class="img-responsive" alt="MySQL Database Visualizations">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
