--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Michael Gonzalez's Data Science Portfolio</h1>
-            <hr>
+            <h1>Michael Gonzalez's<br>Data Science Portfolio</h1>
+            <br>
             <p>This is the portfolio that will showcase completed projects from Bellevue University's Data Science course. 
                 This portfolio will also display a clear range of my progress from the beginning to the end of this course.</p> 
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
