--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -93,7 +93,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="https://github.com/micgonzalez/MySQL-Database-Visualizations" class="portfolio-box">
-                    <img src="img/portfolio/6.jpg" class="img-responsive" alt="MySQL Database Visualizations">
+                    <img src="img/portfolio/6_new.jpg" class="img-responsive" alt="MySQL Database Visualizations">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
