--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -75,7 +75,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="https://github.com/micgonzalez/lucky-parking/tree/reddit-analysis/notebooks" class="portfolio-box">
-                    <img src="img/portfolio/5.jpg" class="img-responsive" alt="Lucky Parking's Reddit Text Analysis">
+                    <img src="img/portfolio/5_new.jpg" class="img-responsive" alt="Lucky Parking's Reddit Text Analysis">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
