--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -2,72 +2,72 @@
     <div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/DSC540_Mid_Term_Project" class="portfolio-box">
-                    <img src="img/portfolio/1_new.jpg" class="img-responsive" alt="DSC 540 Data Transformation Mid Term Project">
+                <a href="https://github.com/micgonzalez/311-data/tree/dataAnalysis/dataAnalysist" class="portfolio-box">
+                    <img src="img/portfolio/1_new.jpg" class="img-responsive" alt="Los Angeles 311 Service Analysis">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                School Work
+                                Professional
                             </div>
                             <div class="project-name">
-                                DSC 540 Data Transformation Mid Term Project
+                                Los Angeles 311 Service Analysis
                                 <br>
                                 <br>
-                                Project displaying my data wrangling skills.
+                                Displaying insights from service request data.
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/DSC680-Fall-2020-Portfolio-Projects/tree/master/project_one" class="portfolio-box">
-                    <img src="img/portfolio/2_new.jpg" class="img-responsive" alt="DSC 680 Project One">
+                <a href="https://github.com/micgonzalez/Pivot-Table-in-Excel" class="portfolio-box">
+                    <img src="img/portfolio/2_new.jpg" class="img-responsive" alt="Paint Sales in Excel">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                School Work
+                                Professional
                             </div>
                             <div class="project-name">
-                                DSC 680 Project One
+                                Paint Sales in Excel
                                 <br>
                                 <br>
-                                Predicting heart disease in men and women.
+                                Creating a pivot table of regional sales data.
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/DSC680-Fall-2020-Portfolio-Projects/tree/master/project_two" class="portfolio-box">
-                    <img src="img/portfolio/3_new.jpg" class="img-responsive" alt="DSC 680 Project Two">
+                <a href="https://github.com/micgonzalez/Data-Modeling-in-Excel" class="portfolio-box">
+                    <img src="img/portfolio/3_new.jpg" class="img-responsive" alt="Data Modeling with Pivot Table">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                School Work
+                                Professional
                             </div>
                             <div class="project-name">
-                                DSC 680 Project Two
+                                Data modeling in Excel
                                 <br>
                                 <br>
-                                Displaying the COVID-19 effects on Los Angeles County.
+                                Displaying data modeling with a pivot table.
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/DSC680-Fall-2020-Portfolio-Projects/tree/master/project_three" class="portfolio-box">
-                    <img src="img/portfolio/4_new.jpg" class="img-responsive" alt="DSC 680 Project Three">
+                <a href="https://github.com/micgonzalez/Data-Visualizations-in-Power-BI" class="portfolio-box">
+                    <img src="img/portfolio/4_new.jpg" class="img-responsive" alt="Data Visualizations in Power BI">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                School Work
+                                Professional
                             </div>
                             <div class="project-name">
-                                DSC 680 Project Three
+                                Data Visualizations in Power BI
                                 <br>
                                 <br>
-                                Predicting earthquakes with machine learning.
+                                Displaying visualizations created in Power BI.
                             </div>
                         </div>
                     </div>
