Updating portfolio.html page

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -20,26 +20,8 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/Pivot-Table-in-Excel" class="portfolio-box">
-                    <img src="img/portfolio/2_new.jpg" class="img-responsive" alt="Paint Sales in Excel">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Professional
-                            </div>
-                            <div class="project-name">
-                                Paint Sales in Excel
-                                <br>
-                                <br>
-                                Creating a pivot table of regional sales data.
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
                 <a href="https://github.com/micgonzalez/Data-Modeling-in-Excel" class="portfolio-box">
-                    <img src="img/portfolio/3_new.jpg" class="img-responsive" alt="Data Modeling with Pivot Table">
+                    <img src="img/portfolio/2_new.jpg" class="img-responsive" alt="Data Modeling with Pivot Table">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -50,6 +32,24 @@
                                 <br>
                                 <br>
                                 Displaying data modeling with a pivot table.
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="https://public.tableau.com/app/profile/michael.gonzalez8104" class="portfolio-box">
+                    <img src="img/portfolio/3_new.jpg" class="img-responsive" alt="Profile of Tableau Projects">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Professional
+                            </div>
+                            <div class="project-name">
+                                Profile of Tableau Projects
+                                <br>
+                                <br>
+                                Displaying public profile of Tableau projects.
                             </div>
                         </div>
                     </div>
