--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,7 @@
         <div class="header-content-inner">
             <h1>Michael Gonzalez's<br>Data Science Portfolio</h1>
             <br>
-            <p>This is the portfolio that will showcase completed projects from Bellevue University's Data Science course. 
-                This portfolio will also display a clear range of my progress from the beginning to the end of this course.</p> 
+            <p>This portfolio will showcase completed projects from past Data Science jobs. It will also display a range of skills used in this career field.</p> 
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
         </div>
     </div>
