--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -4,7 +4,7 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">About Me</h2>
                 <hr class="light">
-                <p class="text-faded-about"><img src="https://avatars0.githubusercontent.com/u/47374721?s=460&u=2305234a402a106bcd2374612f21676205af1ed4&v=4" alt="Michael Gonzalez" style="float:center;width:250px;height:250px;" hspace="15">
+                <p class="text-faded-about"><img src="https://avatars0.githubusercontent.com/u/47374721?s=460&u=2305234a402a106bcd2374612f21676205af1ed4&v=4" alt="Michael Gonzalez" style="float:left;width:250px;height:250px;" hspace="15">
                     <br><br><br><br><br><br><br><br><br><br><br><br>Thanks for visiting my portfolio! My professinal background has been in Graphic Design and Front-End development,
                     which this seems to be an interesting pathway to this career choice. I have always been interested in creating visualizations that can convey
                     messages to people of all ages. With my new focus on data science, I can utilize my gained skills from Graphic Design and Front-End development 
