Updating information to call to action section

--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -5,10 +5,10 @@
                 <h2 class="section-heading">About Me</h2>
                 <hr class="light">
                 <p class="text-faded-about"><img src="https://avatars0.githubusercontent.com/u/47374721?s=460&u=2305234a402a106bcd2374612f21676205af1ed4&v=4" alt="Michael Gonzalez" style="float:left;width:200px;height:200px;" hspace="15">
-                    Thanks for visiting my portfolio! &nbspMy professinal background has been in Graphic Design and Front-End development,
+                    Thanks for visiting my portfolio! &nbsp&nbspMy professinal background has been in Graphic Design and Front-End development,
                     which this seems to be an interesting pathway to this career choice. I have always been interested in creating visualizations that can convey
                     messages to people of all ages. With my new focus on data science, I can utilize my gained skills from Graphic Design and Front-End development 
-                    to create works that can be used as part of great storytelling. I have a new fondness for this career.</p>
+                    to create works that can be used as part of great storytelling.</p>
                 <!--<a href="#" class="btn btn-default btn-xl">Get Started!</a>and I am excited to gain more expereince in this career field.-->
             </div>
         </div>
