Updating Portfolio Information

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -21,7 +21,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="https://github.com/micgonzalez/Data-Modeling-in-Excel" class="portfolio-box">
-                    <img src="img/portfolio/2_new.jpg" class="img-responsive" alt="Data Modeling with Pivot Table">
+                    <img src="img/portfolio/2_new.jpg" class="img-responsive" alt="Data Modeling with two Pivot Charts">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -31,7 +31,7 @@
                                 Data modeling in Excel
                                 <br>
                                 <br>
-                                Displaying data modeling with a pivot table.
+                                Displaying data modeling with two pivot charts.
                             </div>
                         </div>
                     </div>
