Udating the portfolio code

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/311-data/tree/dataAnalysis/dataAnalysis" class="portfolio-box">
+                <a href="https://github.com/micgonzalez/311-data/tree/dataAnalysis/dataAnalysis" target="_blank" class="portfolio-box">
                     <img src="img/portfolio/1_new.jpg" class="img-responsive" alt="Los Angeles 311 Service Analysis">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -20,7 +20,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/Data-Modeling-in-Excel" class="portfolio-box">
+                <a href="https://github.com/micgonzalez/Data-Modeling-in-Excel" target="_blank" class="portfolio-box">
                     <img src="img/portfolio/2_new.jpg" class="img-responsive" alt="Data Modeling with two Pivot Charts">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -38,7 +38,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://public.tableau.com/app/profile/michael.gonzalez8104" class="portfolio-box">
+                <a href="https://public.tableau.com/app/profile/michael.gonzalez8104" target="_blank" class="portfolio-box">
                     <img src="img/portfolio/3_new.jpg" class="img-responsive" alt="Profile of Tableau Projects">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -56,7 +56,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/Data-Visualizations-in-Power-BI" class="portfolio-box">
+                <a href="https://github.com/micgonzalez/Data-Visualizations-in-Power-BI" target="_blank" class="portfolio-box">
                     <img src="img/portfolio/4_new.jpg" class="img-responsive" alt="Data Visualizations in Power BI">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -74,7 +74,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/lucky-parking/tree/reddit-analysis/notebooks" class="portfolio-box">
+                <a href="https://github.com/micgonzalez/lucky-parking/tree/reddit-analysis/notebooks" target="_blank" class="portfolio-box">
                     <img src="img/portfolio/5_new.jpg" class="img-responsive" alt="Lucky Parking's Reddit Text Analysis">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -92,7 +92,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/MySQL-Database-Visualizations" class="portfolio-box">
+                <a href="https://github.com/micgonzalez/MySQL-Database-Visualizations" target="_blank" class="portfolio-box">
                     <img src="img/portfolio/6_new.jpg" class="img-responsive" alt="MySQL Database Visualizations">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
