Updating the portfolio page.

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -56,18 +56,18 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/Data-Visualizations-in-Power-BI" target="_blank" class="portfolio-box">
-                    <img src="img/portfolio/4_new.jpg" class="img-responsive" alt="Data Visualizations in Power BI">
+                <a href="https://github.com/micgonzalez/Basic-Machine-Learning-in-R-side-project" target="_blank" class="portfolio-box">
+                    <img src="img/portfolio/4_new.jpg" class="img-responsive" alt="Machine Learning with R">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
                                 Professional
                             </div>
                             <div class="project-name">
-                                Data Visualizations in Power BI
+                                Machine Learning with R
                                 <br>
                                 <br>
-                                Displaying visualizations created in Power BI.
+                                Displaying a ML project in R.
                             </div>
                         </div>
                     </div>
